# chnet-nyuad

./: CAEN installation guide.md  Header.h  Makefile  README  README.md  ROOT installation guide.md  Shm.h  XRFSoftware Instructions rev2.odt  variables.h  xrfmultidet_versionControl.tex
Batch Analysis Suite/: save  suite.sh
CAEN-libs/DPP-PHA_ControlSoftware-1.2.3/GUI/: Makefile  Makefile.am  Makefile.in  dofit.cmd
DEV/: Makefile  TODO.txt  maXRF-app.pro  phasing_out_shm.txt  phasing_out_shm1.txt
DOC/: M404_8PD.txt
DPPDrivers/DPP-PHA_ControlSoftware-1.2.3/src/: Analyzer.c  CAENDumper.c  CAENTypes.c  Configurator.c  Errors.c  Makefile  Makefile.am  Plot.c  Plot_ci.c  Plotter.c  commands.c  fft.c  keyb.c
DPPDrivers/DPP-PHA_ControlSoftware-1.2.3/src/.deps/: Analyzer.Po  Analyzer_ci.Po  Analyzer_new.Po  Analyzer_ng.Po  CAENBuffer.Po  CAENDumper.Po  CAENTypes.Po  Configurator.Po  Digitizer.Po  Digitizer_new.Po  Errors.Po  HistoMem.Po  Parameter.Po  Plot.Po  Plot_ci.Po  Plotter.Po  commands.Po  globs.Po  keyb.Po  main.Po  params_new.Po  params_ng.Po
Digitizer_Interface/: .qmake.stash  GuiCreator.cpp  Makefile  mainwindow.h
Digitizer_USB/: Makefile
Digitizer_USB.backup/: ADCXRF_USB.pro
MotorParmetersTable/: MotorParmetersTable.pro  XrayEnergy
OnLineMap/: .qmake.stash  GUI_CREATOR.cpp  Makefile  main.cpp
RELEASE/: multidetector_calibrationparameters.txt
ScreenDetector/: ScreenDetector
Spectrum/: .qmake.stash  Makefile  Position.txt  Spectrum.pro  main.cpp  mainwindow.cpp  mainwindow.h  percorso  plot.cpp
Terminal_Test/: mainwindow.cpp
Test_Stage/: ScreenResolution  TTY_motors.cpp  Test_Stage.pro  XY_Z_Init.cpp.complete  XY_Z_Init.cpp.ori
XRF-LABEC_ROOTv8.0/: C863Config.xls  Header.h  QT_variables.h  README  channel_intervals  variables.h
XRFMultidet_v10.0/: variables.h
XRFMultidet_v10.1/: LICENSE
XRFMultidet_v10.3/: channel_intervals  variables.h
XRFMultidet_v10.4/: multidetector_calibrationparameters.txt  variables.h
XRFMultidet_v11.0/: channel_intervals
XRFMultidet_v11.2/: multidetector_calibrationparameters.txt  variables.h
XRFMultidet_v11.3/: QT_variables.h
XRFOnedet_v8.0/: Shm.h
XRF_Scanner_Dev_3/: Calibration.txt  Connections_Creator.cpp  DPPCoreLog.txt  GUI_Creator.cpp  Makefile  Menu.cpp  OnLineMap  README_1AGO2016  SHM_Creator.cpp  ScanYX_XY.cpp  TTY_motors.cpp  XRF  autofocus.cpp  external_programs.cpp  laser.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow_loadSHM.cpp  mainwindow_mouse.cpp  mainwindow_showMap.cpp  modules  motors_init.cpp  motors_move.cpp  rate
XRayTable/: Makefile  (+2 more)
utility/CAEN-libs/DPP-PHA_ControlSoftware-1.2.3/: Makefile.am  Makefile.in
utility/CAEN-libs/DPP-PHA_ControlSoftware-1.2.3/GUI/: fit.cmd
utility/CAEN-libs/DPP-PHA_ControlSoftware-1.2.3/src/: Digitizer.c  Makefile.in  Plot_ng.c  main.c  messages.c  params_ci.c
utility/CAEN-libs/DPP-PHA_ControlSoftware-1.2.3/src/.deps/: Digitizer_new.Po  Digitizer_ng.Po
utility/CAEN-libs/DPP-PHA_ControlSoftware-1.2.3_fixed/: Makefile  configure  configure.ac
utility/CAEN-libs/DPP-PHA_ControlSoftware-1.2.3_fixed/Setup/Windows/: ReleaseNotes_PHA.txt
utility/CAEN-libs/DPP-PHA_ControlSoftware-1.2.3_fixed/autom4te.cache/: requests
utility/CAEN-libs/DPP-PHA_ControlSoftware-1.2.3_fixed/inc/: Analyzer_ci.h  CAENFlash.h  CAENHistogram.h  globs.h
utility/CAEN-libs/DPP-PHA_ControlSoftware-1.2.3_fixed/src/: Analyzer_ng.c  Digitizer_ng.c  Makefile  params_new.c
utility/CAEN-libs/DPP-PHA_ControlSoftware-1.2.3_fixed/src/.deps/: Analyzer_new.Po  CAENBuffer.Po  Controller.Po  Plot.Po  Plot_tf2.Po  main.Po  params_new.Po
(+1329 files in other folders)
