guidir = /etc/DPP-PHA_ControlSoftware
dist_gui_DATA = Setup/Jar/DPP-PHA_ControlSoftware.jar Setup/Configs/ConfigVersions.txt Setup/Configs/Linux/PHA/DefaultDppRunnerConfig.txt Setup/Configs/Linux/PHA/GuiConfig.txt *.cmd ../Setup/Windows/CAEN_License_Agreement.txt ../Setup/Linux/Readme_PHA.txt ../Setup/Windows/ReleaseNotes_PHA.txt

jlibdir = /etc/DPP-PHA_ControlSoftware/lib
dist_jlib_DATA = Setup/Jar/lib/*.jar

dist_bin_SCRIPTS = Setup/Scripts/Linux/DPP-PHA_ControlSoftware

